Dynamic sprite sheet background resizing.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <div id="event">
     <div class="visual">
       <div class="inner">
-        &nbsp;
+        <div class="illu">
+					&nbsp;
+				</div>
       </div>
     </div>
     <div class="description"></div>
